--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ buildNumber.properties
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
 java-example/.idea/workspace.xml
+java-example/.idea/workspace.xml
