--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ buildNumber.properties
 !/.mvn/wrapper/maven-wrapper.jar
 java-example/.idea/workspace.xml
 java-example/.idea/workspace.xml
+java-example/.idea/workspace.xml
+java-admin/.idea/workspace.xml
