Сценарий, проверяющий наличие стикеров у товаров

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ java-example/.idea/workspace.xml
 java-example/.idea/workspace.xml
 java-example/.idea/workspace.xml
 java-admin/.idea/workspace.xml
+java-example/.idea/workspace.xml
