Проверка сортировки стран и геозон в админке

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ java-example/.idea/workspace.xml
 java-example/.idea/workspace.xml
 java-admin/.idea/workspace.xml
 java-example/.idea/workspace.xml
+java-example/.idea/workspace.xml
+java-example/.idea/workspace.xml
