Проверка, что открывается правильная страница товара

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ java-admin/.idea/workspace.xml
 java-example/.idea/workspace.xml
 java-example/.idea/workspace.xml
 java-example/.idea/workspace.xml
+java-example/.idea/workspace.xml
+java-example/.idea/workspace.xml
