Сценарий регистрации пользователя

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ java-example/.idea/workspace.xml
 java-example/.idea/workspace.xml
 java-example/.idea/workspace.xml
 java-example/.idea/workspace.xml
+java-example/.idea/workspace.xml
