--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ java-example/.idea/workspace.xml
 java-example/.idea/workspace.xml
 java-example/.idea/workspace.xml
 java-example/.idea/workspace.xml
+java-example/.idea/workspace.xml
