Открытие ссылок в новом окне

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ java-example/.idea/workspace.xml
 java-example/.idea/workspace.xml
 java-example/.idea/workspace.xml
 java-example/.idea/workspace.xml
+java-example/.idea/workspace.xml
